# rclip2

./: README.md  poetry.toml  pyproject.toml
src/rclip/: __init__.py  flush.py  main.py  ping.py  receive.py  send.py  utils.py
